@@ -8,7 +8,7 @@ ENV JAVA_HOME="/usr/lib/jvm/java-8-openjdk-amd64" \
     GRADLE_HOME="/opt/gradle-4.1" \
     KOTLIN_HOME="/opt/kotlinc" \
     ANDROID_HOME="/opt/android-sdk" \
-    _JAVA_OPTIONS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap"
+    _JAVA_OPTIONS="-XX:+UnlockExperimentalVMOptions"
 ENV PATH="${PATH}:${ANDROID_HOME}/cmake/bin:${GRADLE_HOME}/bin:${KOTLIN_HOME}/bin:${ANDROID_HOME}/emulator:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools:${ANDROID_HOME}/tools/bin:${ANDROID_NDK_HOME}"
 RUN apt-get install -y locales && \
     locale-gen en_US.UTF-8
